--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,10 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "node": "^20.16.0",
